# batch_de

./: .env.example  .flake8  .gitignore  Dockerfile  Dockerfile.spark  README.md  docker-compose.base.yml  docker-compose.dataops_stack_a.yml  docker-compose.dataops_stack_b.yml  docker-compose.stack-a.yml  docker-compose.stack-b.yml  docker-compose.yml  fix_functions.sql  pyproject.toml  requirements.txt
.github/workflows/: ci-stack-a.yml  ci-stack-b.yml  ci.yml  ci.yml.bak  deploy.yml  docker-build.yml  integration-tests.yml  unit-tests.yml
_bmad/: config.toml
_bmad-output/implementation-artifacts/: prompt_blind_hunter.md  prompt_edge_case_hunter.md  pyspark_diff.txt
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
ci_cd/: gitlab-ci.yml
config/: schema-reference.json
config/great_expectations/: great_expectations.yml
config/monitoring/: alert-rules.yml  alertmanager.tmpl  alertmanager.yml  grafana-datasources.yml  jmx-exporter-rules.yml  prometheus.yml  recording-rules.yml  statsd-mapping.yml
dags/: stack_a_dwh_pipeline.py  stack_b_lakehouse_pipeline.py  week1_first_dag.py
docs/: ARCHITECTURE.md  OPERATIONS.md  SETUP.md
notebooks/: 01_explore_bronze.ipynb  02_explore_silver.ipynb  03_explore_gold.ipynb
pyspark/: check_schema.py  test_airflow_spark.py  verify_delta.py  verify_gold.py  verify_silver.py
scripts/: integration_run_pipeline.py  mock_data_generator.py  post_deploy_validation.py  run_ge_validation.py  schema_check.py
tests/: test_dag_validation.py  test_imports.py
(+149 files in other folders)
